update app details and circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,11 +34,11 @@ workflows:
       - check:
           filters:
             branches:
-              ignore: master
+              ignore: app
 
   deploy:
     jobs:
       - deploy:
           filters:
             branches:
-              only: master
+              only: app
