--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "engines": {
     "node": ">= 8.10.0"
   },
-  "name": "backport",
+  "name": "hm-backport",
   "private": true,
   "scripts": {
     "check-build": "tsc --build tsconfig.build.json",
