--- a/now.json
+++ b/now.json
@@ -3,7 +3,7 @@
   "functions": {
     "src/index.ts": {
       "memory": 128,
-      "runtime": "@now/node"
+      "runtime": "@now/node@1.2.0"
     }
   },
   "env": {
